--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -28,5 +28,15 @@
   "passwordAndPasswordConfirmValueIsNotMatch": "value of password field and password confirm field are not match.",
   "hereIsYourFirstStepWithUs": "Here's your first step with us",
   "weakPassword": "The password provided is too weak.",
-  "emailAlreadyInUse": "The account already exists for that email."
+  "emailAlreadyInUse": "The account already exists for that email.",
+  "login": "Login",
+  "userNotFound": "No user found for that email.",
+  "wrongPassword": "Wrong password provided for that user.",
+  "alreadyHaveAnAccount": "Already have an account",
+  "doNotHaveAnAccount": "Don't have an account",
+  "createAccount": "Create account",
+  "forgotPassword": "Forgot password",
+  "continueText": "continue",
+  "passwordResetLinkAreSendToEmail": "Enter the email address associated with your account and we'll send you a link to reset your password.",
+  "backToLogin": "Back to login"
 }
