--- a/l10n/app_fa.arb
+++ b/l10n/app_fa.arb
@@ -42,6 +42,8 @@
   "displayName": "نام نمایشی",
   "yes": "بله",
   "no": "خیر",
-  "areYouSureYouWantToLogout": "آیا مطمئا هستید که میخواهید از حساب خارج شوید ؟"
-
+  "areYouSureYouWantToLogout": "آیا مطمئا هستید که میخواهید از حساب خارج شوید ؟",
+  "writeYourMessage": "پیغام خود را بنویسید...",
+  "contacts": "مخاطبین",
+  "chats": "گفتگو ها"
 }
