change realtime database to firestore

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -48,5 +48,6 @@
   "writeYourMessage": "Write you message...",
   "contacts": "Contacts",
   "chats": "Chats",
-  "signOut": "Sign out"
+  "signOut": "Sign out",
+  "newMessage": "New message"
 }
