--- a/l10n/app_fa.arb
+++ b/l10n/app_fa.arb
@@ -46,6 +46,7 @@
   "writeYourMessage": "پیغام خود را بنویسید...",
   "contacts": "مخاطبین",
   "chats": "گفتگو ها",
-  "signOut": "خروج از حساب"
+  "signOut": "خروج از حساب",
+  "newMessage": "پیام جدید"
 
 }
