add material 3 drawer

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -49,5 +49,6 @@
   "contacts": "Contacts",
   "chats": "Chats",
   "signOut": "Sign out",
-  "newMessage": "New message"
+  "newMessage": "New message",
+  "home": "Home"
 }
