--- a/l10n/app_fa.arb
+++ b/l10n/app_fa.arb
@@ -47,6 +47,7 @@
   "contacts": "مخاطبین",
   "chats": "گفتگو ها",
   "signOut": "خروج از حساب",
-  "newMessage": "پیام جدید"
+  "newMessage": "پیام جدید",
+  "home": "خانه"
 
 }
