add ability to edit my profile

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -56,5 +56,7 @@
   "camera": "Camera",
   "storage": "Storage",
   "cropper": "Cropper",
-  "displayNameIsAMust": "You need to fill Display name field."
+  "displayNameIsAMust": "You need to fill Display name field.",
+  "editUserInformation": "My information"
+
 }
