--- a/l10n/app_fa.arb
+++ b/l10n/app_fa.arb
@@ -54,7 +54,8 @@
   "camera": "دوربین",
   "storage": "حافظه",
   "cropper": "کراپر",
-  "displayNameIsAMust": "کامل کردن فیلد نام نمایشی اجباری می باشد."
+  "displayNameIsAMust": "کامل کردن فیلد نام نمایشی اجباری می باشد.",
+  "editUserInformation": "مشخصات کاربری"
 
 
 }
