add double click for exist and network catch for images

--- a/l10n/app_en.arb
+++ b/l10n/app_en.arb
@@ -57,6 +57,7 @@
   "storage": "Storage",
   "cropper": "Cropper",
   "displayNameIsAMust": "You need to fill Display name field.",
-  "editUserInformation": "My information"
+  "editUserInformation": "My information",
+  "tapBackAgainToLeave":"Tap back again to leave"
 
 }
